[gd_scene load_steps=4 format=2]

[ext_resource path="res://recursos/bolitas/traje.png" type="Texture" id=1]
[ext_resource path="res://scripts/GenericoBolita.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 128.798

[node name="Azul" type="Area2D" groups=[
"bolita",
]]
script = ExtResource( 2 )
nombre = "azul"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="rotar" type="Tween" parent="."]

[node name="mover" type="Tween" parent="."]
[connection signal="input_event" from="." to="." method="_on_Azul_input_event"]
