[gd_scene load_steps=4 format=2]

[ext_resource path="res://recursos/bolitas/MASCARILLA.png" type="Texture" id=1]
[ext_resource path="res://scripts/GenericoBolita.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 130.886

[node name="Verde" type="Area2D" groups=[
"bolita",
]]
script = ExtResource( 2 )
nombre = "verde"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="mover" type="Tween" parent="."]

[node name="rotar" type="Tween" parent="."]
[connection signal="input_event" from="." to="." method="_on_Verde_input_event"]
